[package]
name = "summarize-time-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.10.0", features = ["serde_with"] }
csv = "1.3.0"
encoding_rs = "0.8.34"
futures = "0.3.30"
iconv = "0.1.1"
mongodb = "2.8.2"
polars = "0.39.2"
polars_excel_writer = { version = "0.7.0", features = ["zlib"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
xlsxwriter = "0.6.0"
pyo3 = { version = "0.16", features = ["auto-initialize"] }

[build-dependencies]
maturin = "0.12"